fix overflow

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   font-family: "JetBrains Mono", monospace;
   height: 100%;
+  overflow: hidden;
 }
 
 html {
